
PIG-2151: Add annotation to specify output schema in Java UDFs (dvryaboy)

PIG-2230: Improved error message for invalid parameter format (xuitingz via olgan)

PIG-2328: Add builtin UDFs for building and using bloom filters (gates)

PIG-2338: Need signature for EvalFunc (daijy)

PIG-2337: Provide UDF with input schema (xutingz via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-2860: [piggybank] TestAvroStorageUtils.testGetConcretePathFromGlob fails on some version of hadoop (cheolsoo via jcoveney)

PIG-2861: PlanHelper imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (jcoveney)

PIG-2849: Errors in document Getting Started (miyakawataku via billgraham)

PIG-2843: Typo in Documentation (eric59 via billgraham)

PIG-2841: Inconsistent URL in Docs (eric59 via billgraham)

PIG-2740: get rid of "java[77427:1a03] Unable to load realm info from SCDynamicStore" log lines when running pig tests (julien)

PIG-2839: mock.Storage overwrites output with the last relation written when storing UNION (julien)

PIG-2840: Fix SchemaTuple bugs (jcoveney)

PIG-2842: TestNewPlanOperatorPlan fails when new Configuration() picks up a previous minicluster conf file (julien)

PIG-2827: Unwrap exception swallowing in TOP (haitao.yao via jcoveney)

PIG-2825: StoreFunc signature setting in LogicalPlan broken (jcoveney)

PIG-2815: class loader management in PigContext (rangadi via jcoveney)

PIG-2813: Fix test regressions from PIG-2632 (jcoveney)

PIG-2806: Fix merge join test regression from PIG-2632 (jcoveney)

PIG-2809: TestUDFContext broken by PIG-2699 (julienledem via daijy)

PIG-2807: TestParser TestPigStorage TestNewPlanOperatorPlan broken by PIG-2699 (julienledem via daijy)

PIG-2782: Specifying sorting field(s) at nightly.conf (cheolsoo via daijy)

PIG-2790: After Pig-2699 the script schema (LOAD ... USING ... AS {script schema}) is passed after getSchema is called (daijy)

PIG-2777: Docs are broken due to malformed xml after PIG-2673 (dvryaboy)
