@@ -232,6 +232,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-2866: PigServer fails with macros without a script file (billgraham)
+
 PIG-2860: [piggybank] TestAvroStorageUtils.testGetConcretePathFromGlob fails on some version of hadoop (cheolsoo via jcoveney)
 
 PIG-2861: PlanHelper imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (jcoveney)
